deployments/metadig-engine/metadig-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadig-scheduler
  namespace: metadig
spec:
  selector:
    matchLabels:
      app: metadig-scheduler
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: metadig-scheduler
        tier: backend
    spec:
      serviceAccountName: metadig
      containers:
        - name: metadig-scheduler
          image: docker.io/metadig/metadig-scheduler:2.3.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: metadig-pv
            mountPath: /opt/local
            # Change this to false so filestore ingest can save files from stage to the filestore
            readOnly: false
      restartPolicy: Always
      volumes:
      - name: metadig-pv
        persistentVolumeClaim:
          #claimName: nfs-pvc
          claimName: cephfs-metadig-pvc
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.96.0.10
        searches:
        - metadig.svc.cluster.local
        - svc.cluster.local
        - cluster.local
        options:
        - name: ndots
          value: "5"
