deployments/metadig-engine/metadig-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadig-worker
  namespace: metadig
spec:
  selector:
    matchLabels:
      app: metadig-worker
      tier: backend
  replicas: 10
  template:
    metadata:
      labels:
        app: metadig-worker
        tier: backend
    spec:
      #serviceAccountName: metadig-serviceaccount
      containers:
      - name: metadig-worker
        image: docker.io/metadig/metadig-worker:2.3.3
        #imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: metadig-pv
          mountPath: "/opt/local"
          readOnly: false
      volumes:
      - name: metadig-pv
        persistentVolumeClaim:
          claimName: cephfs-metadig-pvc
