deployments/metadig-engine/metadig-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadig-controller
  namespace: metadig
spec:
  selector:
    matchLabels:
      app: metadig-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: metadig-controller
    spec:
      #serviceAccountName: metadig-serviceaccount
      containers:
      - name: metadig-controller
        image: docker.io/metadig/metadig-controller:2.3.1
        ports:
        - name: metadig-tomcat
          containerPort: 8080
        imagePullPolicy: Always
        volumeMounts:
        - name: metadig-pv
          mountPath: "/opt/local"
          readOnly: true
      volumes:
      - name: metadig-pv
        persistentVolumeClaim:
          claimName: cephfs-metadig-pvc
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: metadig-controller
  namespace: metadig
spec:
  selector:
    app: metadig-controller
  ports:
  #- name: metadig-httpd
  #  port: 80
  #  protocol: TCP
  #  targetPort: metadig-httpd
  - name: metadig-controller
    port: 8080
    protocol: TCP
    targetPort: metadig-tomcat
