deployments/metadig-engine/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: metadig
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        # 3-management loads the RabbitMQ Administrative plugin with the
        # most recent 3.x release.
        image: rabbitmq:3-management
        ports:
        - name: rabbitmq
          containerPort: 5672
        - name: rabbitmqadmin
          containerPort: 15672
        imagePullPolicy: Always
      restartPolicy: Always
      #volumes:
      #- name: metadig-ctl-claim0
      #  persistentVolumeClaim:
      #    claimName: metadig-ctl-claim0

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: metadig
spec:
  selector:
    app: rabbitmq
  ports:
  - name: rabbitmq
    port: 5672
    protocol: TCP
    targetPort: rabbitmq
  - name: rabbitmqadmin
    port: 15672
    protocol: TCP
    targetPort: rabbitmqadmin
